<resources>
    <string name="app_name">MR.B Calculator v1</string>

    <string name="one" >1</string>
    <string name="tow" >2</string>
    <string name="three" >3</string>
    <string name="four" >4</string>
    <string name="five" >5</string>
    <string name="six" >6</string>
    <string name="seven" >7</string>
    <string name="eight" >8</string>
    <string name="nine" >9</string>
    <string name="zero" >0</string>
    <string name="two_zero" >00</string>
    <string name="dot" >.</string>




    <string name="equal_operator" >=</string>
    <string name="addition_operator" >+</string>
    <string name="subtraction_operator" >-</string>
    <string name="multiplication_operator" >x</string>
    <string name="division_operator" >/</string>
    <string name="quare_root_operator" >Sqr</string>
    <string name="back_clear" >C</string>
    <string name="clear_all" >CLR</string>



</resources>
